--- a/nt.html
+++ b/nt.html
@@ -11,7 +11,11 @@
 ><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/mnt/share/nt.py">/mnt/share/nt.py</a></font></td></tr></table>
     <p><tt>Library&nbsp;of&nbsp;elementary&nbsp;number&nbsp;theory<br>
 &nbsp;<br>
-This&nbsp;library&nbsp;contains&nbsp;some&nbsp;basic&nbsp;number&nbsp;theory&nbsp;functions.</tt></p>
+This&nbsp;library&nbsp;contains&nbsp;the&nbsp;following&nbsp;number&nbsp;theory&nbsp;functions.<br>
+&nbsp;<br>
+Common&nbsp;function:&nbsp;GCD,&nbsp;LCM,&nbsp;IsPrime,&nbsp;Primes,&nbsp;Phi,&nbsp;SquareFree,&nbsp;PowMod<br>
+Factorization:&nbsp;Factor,&nbsp;FindAFactor,&nbsp;PollardRho,&nbsp;NumOfFactors,&nbsp;SumOfFactors<br>
+Linear&nbsp;congruent&nbsp;equation&nbsp;solver:&nbsp;LinCongEqn</tt></p>
 <p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#eeaa77">
@@ -23,12 +27,16 @@ This&nbsp;library&nbsp;contains&nbsp;some&nbsp;basic&nbsp;number&nbsp;theory&nbs
 &nbsp;<br>
 Return&nbsp;the&nbsp;factors&nbsp;of&nbsp;n,&nbsp;in&nbsp;the&nbsp;form&nbsp;{a1:b1,&nbsp;a2:b2,&nbsp;...},&nbsp;which&nbsp;means<br>
 n&nbsp;has&nbsp;b1&nbsp;many&nbsp;factor&nbsp;a1's,&nbsp;b2&nbsp;many&nbsp;factor&nbsp;a2's,&nbsp;...</tt></dd></dl>
- <dl><dt><a name="-FindFactor"><strong>FindFactor</strong></a>(n)</dt><dd><tt><a href="#-FindFactor">FindFactor</a>(n)&nbsp;returns&nbsp;a&nbsp;factor&nbsp;of&nbsp;n<br>
+ <dl><dt><a name="-FindAFactor"><strong>FindAFactor</strong></a>(n)</dt><dd><tt><a href="#-FindAFactor">FindAFactor</a>(n)&nbsp;returns&nbsp;a&nbsp;factor&nbsp;of&nbsp;n.<br>
 &nbsp;<br>
-Return&nbsp;a&nbsp;factor&nbsp;of&nbsp;n&nbsp;if&nbsp;n&nbsp;is&nbsp;a&nbsp;composite&nbsp;number.<br>
-When&nbsp;the&nbsp;method&nbsp;fails,&nbsp;return&nbsp;0.<br>
-The&nbsp;method&nbsp;uses&nbsp;pollard&nbsp;rho&nbsp;factorization&nbsp;algorithm.</tt></dd></dl>
+If&nbsp;the&nbsp;input&nbsp;n&nbsp;&lt;=1,&nbsp;it&nbsp;returns&nbsp;0.<br>
+If&nbsp;the&nbsp;input&nbsp;n&gt;=2,&nbsp;it&nbsp;returns&nbsp;a&nbsp;factor&nbsp;of&nbsp;n.&nbsp;If&nbsp;it&nbsp;returns&nbsp;n,&nbsp;then<br>
+n&nbsp;is&nbsp;a&nbsp;prime&nbsp;number.<br>
+&nbsp;<br>
+Example:&nbsp;<a href="#-FindAFactor">FindAFactor</a>(1690023310081)&nbsp;=&nbsp;1299709,&nbsp;here<br>
+1690023310081&nbsp;is&nbsp;the&nbsp;product&nbsp;of&nbsp;two&nbsp;large&nbsp;primes,&nbsp;1299709*1300309</tt></dd></dl>
  <dl><dt><a name="-GCD"><strong>GCD</strong></a>(a, b)</dt><dd><tt><a href="#-GCD">GCD</a>(a,b)&nbsp;returns&nbsp;the&nbsp;gcd&nbsp;of&nbsp;two&nbsp;integers,&nbsp;a&nbsp;and&nbsp;b.</tt></dd></dl>
+ <dl><dt><a name="-IsPrime"><strong>IsPrime</strong></a>(n)</dt><dd><tt><a href="#-IsPrime">IsPrime</a>(n)&nbsp;returns&nbsp;True&nbsp;if&nbsp;n&nbsp;is&nbsp;a&nbsp;prime&nbsp;number&nbsp;and&nbsp;False&nbsp;otherwise.</tt></dd></dl>
  <dl><dt><a name="-LCM"><strong>LCM</strong></a>(a, b)</dt><dd><tt><a href="#-LCM">LCM</a>(a,b)&nbsp;returns&nbsp;the&nbsp;lcm&nbsp;of&nbsp;two&nbsp;integers,&nbsp;a&nbsp;and&nbsp;b.</tt></dd></dl>
  <dl><dt><a name="-LinCongEqn"><strong>LinCongEqn</strong></a>(a, b, m)</dt><dd><tt><a href="#-LinCongEqn">LinCongEqn</a>(a,b,m)&nbsp;gives&nbsp;all&nbsp;solutions&nbsp;to&nbsp;the&nbsp;congruence&nbsp;equation<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a*x&nbsp;=&nbsp;b&nbsp;(mod&nbsp;m)<br>
@@ -45,11 +53,16 @@ positive&nbsp;integers&nbsp;not&nbsp;greater&nbsp;than&nbsp;n&nbsp;that&nbsp;are
 &nbsp;<br>
 For&nbsp;example,&nbsp;in&nbsp;1,&nbsp;2,&nbsp;...&nbsp;,&nbsp;12,&nbsp;the&nbsp;integers&nbsp;coprime&nbsp;to&nbsp;12&nbsp;are<br>
 1,&nbsp;5,&nbsp;7,&nbsp;11,&nbsp;so&nbsp;<a href="#-Phi">Phi</a>(12)&nbsp;=&nbsp;4.</tt></dd></dl>
+ <dl><dt><a name="-PollardRho"><strong>PollardRho</strong></a>(n)</dt><dd><tt><a href="#-PollardRho">PollardRho</a>(n)&nbsp;returns&nbsp;a&nbsp;factor&nbsp;of&nbsp;n&nbsp;if&nbsp;the&nbsp;Pollard&nbsp;Rho&nbsp;algorithm&nbsp;works,<br>
+and&nbsp;return&nbsp;0&nbsp;if&nbsp;the&nbsp;method&nbsp;fails.<br>
+&nbsp;<br>
+The&nbsp;method&nbsp;uses&nbsp;pollard&nbsp;rho&nbsp;factorization&nbsp;algorithm.</tt></dd></dl>
  <dl><dt><a name="-PowMod"><strong>PowMod</strong></a>(a, k, n)</dt><dd><tt><a href="#-PowMod">PowMod</a>(a,k,n)&nbsp;returns&nbsp;a^k&nbsp;mod&nbsp;n,&nbsp;here&nbsp;k&nbsp;could&nbsp;be&nbsp;negative.&nbsp;If<br>
 it&nbsp;doesn't&nbsp;exist,&nbsp;return&nbsp;-1.<br>
 &nbsp;<br>
 Example:&nbsp;1&nbsp;=&nbsp;4&nbsp;(mod&nbsp;3),&nbsp;so&nbsp;2^(-1)&nbsp;=&nbsp;1/2&nbsp;=&nbsp;4/2&nbsp;=&nbsp;2&nbsp;(mod&nbsp;3),&nbsp;thus<br>
 <a href="#-PowMod">PowMod</a>(2,-1,3)&nbsp;=&nbsp;2</tt></dd></dl>
+ <dl><dt><a name="-Primes"><strong>Primes</strong></a>(n)</dt><dd><tt><a href="#-Primes">Primes</a>(n)&nbsp;returns&nbsp;the&nbsp;n-th&nbsp;prime&nbsp;number,&nbsp;where&nbsp;1&lt;=n&lt;=2000.</tt></dd></dl>
  <dl><dt><a name="-SquareFree"><strong>SquareFree</strong></a>(n)</dt><dd><tt><a href="#-SquareFree">SquareFree</a>(n)&nbsp;return&nbsp;True&nbsp;if&nbsp;n&nbsp;is&nbsp;square&nbsp;free,&nbsp;and&nbsp;False&nbsp;otherwise.<br>
 &nbsp;<br>
 Example:&nbsp;12&nbsp;has&nbsp;a&nbsp;factor&nbsp;4,&nbsp;which&nbsp;is&nbsp;a&nbsp;square,&nbsp;so&nbsp;<a href="#-SquareFree">SquareFree</a>(12)<br>
@@ -58,5 +71,12 @@ is&nbsp;False.</tt></dd></dl>
 &nbsp;<br>
 For&nbsp;example,&nbsp;6&nbsp;has&nbsp;four&nbsp;factors&nbsp;1,&nbsp;2,&nbsp;3,&nbsp;6,&nbsp;so&nbsp;<br>
 <a href="#-SumOfFactors">SumOfFactors</a>(6)&nbsp;=&nbsp;1&nbsp;+&nbsp;2&nbsp;+&nbsp;3&nbsp;+&nbsp;6&nbsp;=&nbsp;12.</tt></dd></dl>
-</td></tr></table>
+</td></tr></table><p>
+<table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
+<tr bgcolor="#55aa55">
+<td colspan=3 valign=bottom>&nbsp;<br>
+<font color="#ffffff" face="helvetica, arial"><big><strong>Data</strong></big></font></td></tr>
+    
+<tr><td bgcolor="#55aa55"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
+<td width="100%"><strong>First_Two_Thousand_Primes</strong> = (2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, ...)</td></tr></table>
 </body></html>
